# scd30-picow-prometheus-exporter

./: .env.example  Cargo.toml  LICENSE  README.md  build.rs
.cargo/: config.toml
cyw43-firmware/: LICENSE
src/: exporter_server.rs  main.rs  scd30_sensor.rs  util.rs  wifi_setup.rs
