[package]
name = "scd30-picow-prometheus-exporter"
version = "0.1.0"
edition = "2021"
license = "MIT"
build = "build.rs"

[dependencies]
embassy-executor = { version = "0.7.0", features = [
  "task-arena-size-98304",
  "arch-cortex-m",
  "executor-thread",
  "executor-interrupt",
  "defmt",
] }
embassy-rp = { version = "0.3.1", features = [
  "defmt",
  "unstable-pac",
  "time-driver",
  "critical-section-impl",
  "rp2040",
] }
embassy-time = { version = "0.4.0", features = ["defmt"] }

cyw43 = { version = "0.3.0", features = ["defmt"] }
cyw43-pio = { version = "0.3.0", features = ["defmt"] }

defmt = "0.3.10"
defmt-rtt = "0.4.1"

cortex-m-rt = "0.7.5"
panic-probe = { version = "0.3.2", features = ["print-defmt"] }

portable-atomic = { version = "1.10.0", features = ["critical-section"] }
static_cell = "2.1.0"
embassy-usb-logger = "0.4.0"
log = "0.4.25"
scd30-interface = { version = "2.0.0", features = ["async"] }
embassy-net = { version = "0.6.0", features = ["dhcpv4", "tcp"] }
rand = { version = "0.8.5", default-features = false }
embedded-io-async = "0.6.1"
embassy-sync = "0.6.2"
core2 = { version = "0.4.0", default-features = false }

[build-dependencies]
dotenv-build = "0.1.1"

[profile.release]
debug = 2
lto = true
opt-level = 'z'

[profile.dev]
debug = 2
lto = true
opt-level = "z"
